--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="film_name">Avengers: \nEnd Game</string>
+    <string name="back"><![CDATA[< Back]]></string>
 </resources>
