--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="film_name">Avengers: \nEnd Game</string>
+    <string name="film_name">Avengers: End Game</string>
     <string name="back"><![CDATA[< Back]]></string>
     <string name="text1">Action, Adventure, Fantasy</string>
     <string name="text2">125 Reviews</string>
