--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="film_name">Avengers: End Game</string>
-    <string name="back"><![CDATA[< Back]]></string>
     <string name="text1">Action, Adventure, Fantasy</string>
     <string name="text2">125 Reviews</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="storyline">Storyline</string>
+    <string name="like">Like</string>
 </resources>
