--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="storyline">Storyline</string>
     <string name="like">Like</string>
+    <string name="DetailsRatioPoster">375:298</string>
 </resources>
