добавил collapsingtoolbar к fragmentlist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="storyline">Storyline</string>
     <string name="like">Like</string>
     <string name="DetailsRatioPoster">375:298</string>
+    <string name="movies_list">Movies list</string>
 </resources>
