--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="like">Like</string>
     <string name="DetailsRatioPoster">375:298</string>
     <string name="movies_list">Movies list</string>
+    <string name="cast">Cast</string>
 </resources>
