--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="storyline">Storyline</string>
     <string name="like">Like</string>
-    <string name="DetailsRatioPoster">375:298</string>
+    <string name="DetailsRationPoster">375:298</string>
     <string name="movies_list">Movies list</string>
     <string name="cast">Cast</string>
+    <string name="ListPosterRatio">166:248</string>
 </resources>
