--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="appname">Movie Tracker</string>
     <string name="itemmovie_listtags_placeholder">Action, Adventure, Fantasy</string>
     <string name="itemmovie_review_placeholder">125 Reviews</string>
-    <string name="frdetails_storyline_text">Storyline</string>
+    <string name="details_storyline_text">Storyline</string>
     <string name="itemmovie_like_description">Like</string>
     <string name="details_poster_ratio">375:298</string>
-    <string name="frmovieslists_title">Movies list</string>
+    <string name="itemmovie_title">Movies list</string>
     <string name="details_cast_text">Cast</string>
     <string name="itemmovie_poster_ratio">166:248</string>
-    <string name="ItemActorActorNameToolsText">Text Viewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk</string>
+    <string name="itemactor_actor_name">Text Viewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk</string>
 </resources>
